GNOME Bugzilla – Bug 646031
when failing to connect to an AP reset the combobox to blank
Last modified: 2011-04-01 04:30:47 UTC
When failing to connect to an AP reset the combobox to blank. Right now we don't do this and this has a few problems. * It misleadingly shows that the current Network Name is that AP * It makes it impossible to reconnect to it unless you change the active entry to something else first.
Created attachment 184849 [details] [review] patch