Network: reset the network name combo when disconnected

While we are not connected, showing the name of an access point
in the combobox is misleading.
https://bugzilla.gnome.org/show_bug.cgi?id=646031